--- a/app/1stAnniversary/style.css
+++ b/app/1stAnniversary/style.css
@@ -280,9 +280,9 @@ POLAR BEAR
   text-align: center; /* 文字列を中央ぞろえにする */
   left: 50%; /* 左端を中央に */
   transform: translateX(-50%); /* 左端から中央に移動 */
-  white-space: pre-wrap; /* 改行タグを有効にする */
-  -webkit-transform: translateX(-50%); /* Safari用のベンダープレフィックス */
+  white-space: pre; /* 改行タグを有効にする */
   font-family: 'Arial', sans-serif; /* フォントを指定 */
+  line-height: 0.8; /* 行間を詰める */
 }
 
 .speech-bubble:after {
