--- a/app/1stAnniversary/style.css
+++ b/app/1stAnniversary/style.css
@@ -280,16 +280,29 @@ POLAR BEAR
   text-align: center; /* 文字列を中央ぞろえにする */
   left: 50%; /* 左端を中央に */
   transform: translateX(-50%); /* 左端から中央に移動 */
-  white-space: pre; /* 改行タグを有効にする */
+  white-space: pre-wrap; /* 改行タグを有効にする */
   font-family: 'Arial', sans-serif; /* フォントを指定 */
-  line-height: 0.8; /* 行間を詰める */
+  line-height: 1.1; /* 行間を詰める */
+  display: inline-block; /* 要素の幅を自動調整 */
+  max-width: 80%; /* 最大幅を設定 */
+  width: auto; /* 要素の幅を内容に基づいて自動調整 */
 }
+/* iPad用のスタイル */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .speech-bubble {
+    line-height: 1.2; /* iPad用の行間 */
+    max-width: 90%; /* 最大幅を設定 */
+    width: auto; /* 要素の幅を内容に基づいて自動調整 */
+  }
+}
+
 /* Safari用のスタイル */
 @supports (-webkit-touch-callout: none) {
   .speech-bubble {
     line-height: 1.2; /* Safari用の行間 */
   }
 }
+
 
 .speech-bubble:after {
   content: '';
