--- a/app/1stAnniversary/style.css
+++ b/app/1stAnniversary/style.css
@@ -53,6 +53,7 @@ POLAR BEAR
   border-radius: 60px 0 110px 0;
   margin-top: -70px;
   margin-left: -110px;
+  top: 65%; 
 }
 .polar-bear .scarf {
   height: 74px;
